fix: fixed z-index value in widget-button

--- a/react/Components/whats-app-widget.css
+++ b/react/Components/whats-app-widget.css
@@ -13,7 +13,7 @@
   align-items: center;
   cursor: pointer;
   box-shadow: 0 0 10px rgba(0,0,0,0.4);
-  z-index: 2999999999;
+  z-index: 9999;
 }
 
 .modal-container {
